--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       <button onclick="toggleRepeat()">🔁</button>
       <button onclick="playNext()">⏭</button>
       <input type="range" min="0" max="1" step="0.01" onchange="setVolume(this.value)" />
+
+       <input type="range" id="seekSlider" min="0" max="100" value="0" step="1" onchange="seekAudio(this.value)" style="width:150px">
+    <span id="currentTime">00:00</span> / <span id="totalTime">00:00</span>
     </div>
 
     <table id="songsTable">
