--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Offline Music Player
   </title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
 </head>
 <body>
   <div class="container">
